[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/SetShip.gd" type="Script" id=1]
[ext_resource path="res://Images/UI/grid8.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Screens/Grid.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ShipSlots.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.396078, 0.396078, 0.396078, 1 )

[node name="SetShip" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="Grid" type="TextureRect" parent="."]
margin_left = 56.4454
margin_top = -377.895
margin_right = 824.445
margin_bottom = 390.105
texture = ExtResource( 2 )
stretch_mode = 3
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -830.0
margin_top = -200.0
margin_right = -330.0
margin_bottom = 408.0
__meta__ = {
"_edit_group_": true
}

[node name="Tabs" type="Tabs" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 24.0
tab_align = 0

[node name="ShipSlots" type="Panel" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 28.0
margin_right = 500.0
margin_bottom = 608.0
rect_min_size = Vector2( 500, 580 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ShipSlots"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -270.0
margin_right = 240.0
margin_bottom = 270.0
custom_constants/separation = 15

[node name="Ship1" type="Panel" parent="VBoxContainer/ShipSlots/VBoxContainer"]
margin_right = 480.0
margin_bottom = 96.0
rect_min_size = Vector2( 480, 96 )
size_flags_vertical = 6
custom_styles/panel = SubResource( 1 )

[node name="Ship2" type="Panel" parent="VBoxContainer/ShipSlots/VBoxContainer"]
margin_top = 111.0
margin_right = 480.0
margin_bottom = 207.0
rect_min_size = Vector2( 480, 96 )
size_flags_vertical = 6
custom_styles/panel = SubResource( 1 )

[node name="Ship3" type="Panel" parent="VBoxContainer/ShipSlots/VBoxContainer"]
margin_top = 222.0
margin_right = 480.0
margin_bottom = 318.0
rect_min_size = Vector2( 480, 96 )
size_flags_vertical = 6
custom_styles/panel = SubResource( 1 )

[node name="Ship4" type="Panel" parent="VBoxContainer/ShipSlots/VBoxContainer"]
margin_top = 333.0
margin_right = 480.0
margin_bottom = 429.0
rect_min_size = Vector2( 480, 96 )
size_flags_vertical = 6
custom_styles/panel = SubResource( 1 )

[node name="Ship5" type="Panel" parent="VBoxContainer/ShipSlots/VBoxContainer"]
margin_top = 444.0
margin_right = 480.0
margin_bottom = 540.0
rect_min_size = Vector2( 480, 96 )
size_flags_vertical = 6
custom_styles/panel = SubResource( 1 )
